--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^7.0.4"
+		"vite": "^7.0.4",
+		"vite-plugin-string": "^1.2.3"
 	},
 	"dependencies": {
-		"marked": "^16.0.0"
+		"marked": "^16.1.0"
 	}
 }
